--- a/src/index.css
+++ b/src/index.css
@@ -211,4 +211,10 @@ img {
 
   }
 
-
+.div1 {
+    width: 100px;
+    height: 70px;
+    padding: 10px;
+    border: 1px solid #aaaaaa;
+    float: left;
+}
